--- a/client/src/App.css
+++ b/client/src/App.css
@@ -424,14 +424,14 @@ input[name="top-nav-search-last-input"]{
   min-width: 40rem;
   max-width: 60rem;
   border-radius: 1rem;
-  height: fit-content !important;
+  height: auto;
 }
 
 .login-container h3 {
   font-size: 2.9rem;
   color: white;
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 .login-container p{
@@ -441,7 +441,7 @@ input[name="top-nav-search-last-input"]{
 .input-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .input-group ::placeholder{
@@ -484,7 +484,7 @@ input[name="top-nav-search-last-input"]{
 }
 
 .login-button {
-  padding: 1rem 3rem;
+  padding: 1rem 2rem;
   width: 450px !important;
   border-radius: 5px; 
   background-color: hsla(40, 100%, 50%, 0.1);
